# webpp

./: .clang  .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  .project_alt.json  .travis.yml  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Security.md  gtask  gtask-markdown  reformat.sh  todo.md  travis.yml  vcpkg.json
benchmarks/: CMakeLists.txt  README.md  benchmark.hpp  benchmark_pch.hpp  boost_pch.hpp  common_utils_pch.hpp  empty.cpp  simd_pch.hpp  utils_address.cpp  utils_address_pch.h  utils_address_pch.hpp  valves.cpp  valves_pch.h  valves_pch.hpp
benchmarks/ada/: Makefile  README.md  ada_benchmark.cpp  ada_ip_serializers.hpp  ada_normalize.hpp  ada_scheme.hpp  webpp_ip_serializers.hpp  webpp_scheme.hpp
benchmarks/allocator_packs/: Makefile  allocator_packs_benchmark.cpp
benchmarks/bool_array/: Makefile  bool_array_benchmark.cpp
benchmarks/charset/: Makefile  README.md  ada_find_char.hpp  charset_benchmark.cpp  charset_v1.hpp
benchmarks/equals/: README.md  equals_benchmark.cpp
benchmarks/function/: Makefile  function_benchmark.cpp
benchmarks/headers_has/: Makefile  headers.hpp  headers_has.cpp
benchmarks/iequals/: iequals_benchmark.cpp  iiequals_impl.hpp
benchmarks/ieuqals/: Makefile  iequals_benchmark.cpp
benchmarks/interleave_bits/: Makefile  README.md  interleave_benchmark.cpp
benchmarks/ip/: Makefile  README.md  inet_pton4_parser.hpp  ipv4_benchmark.cpp  ipv4_host_parser.hpp  ipv4_v1.hpp  ipv4_v2.hpp  ipv6_benchmark.cpp
benchmarks/ip_to_string/: Makefile  README.md  ip_to_string_benchmark.cpp
benchmarks/is_alpha/: Makefile  README.md  is_alpha_benchmark.cpp
benchmarks/islower/: Makefile  islower_benchmark.cpp
benchmarks/lexical_cast/: Makefile  lexical_cast_benchmark.cpp
benchmarks/liburlparser-bench/: .gitignore  Makefile  README.md  liburlparser_benchmark.cpp
benchmarks/str_find/: str_find_benchmark.cpp
benchmarks/str_to_integral_types/: Makefile  str_to_integral_types_benchmark.cpp
benchmarks/string_join/: Makefile  README.md  string_join_benchmark.cpp
benchmarks/strview_find_method/: Makefile  strview_find_method_benchmark.cpp
benchmarks/tokenizer/: Makefile  README.md  string_tokenizer.hpp  string_tokenizer_v1.hpp  string_tokenizer_v2.hpp  tokenizer_benchmark.cpp
benchmarks/tolower/: Makefile  tolower_benchmark.cpp
benchmarks/uri/: Makefile  README.md  uri_benchmark.cpp
benchmarks/uri_normalize/: Makefile  uri_normalize_benchmark.cpp
benchmarks/valves_vs_routes/: Makefile  README.md  path.hpp  route.hpp  router.hpp  valves_vs_routes_benchmark.cpp
benchmarks/vector_erase/: Makefile  vector_erase_benchmark.cpp
core/: CMakeLists.txt  README.md
core/include/: main.h  main.hpp  version.hpp  webpp.h  webpp.hpp
core/src/: main.cpp  webpp.cpp
examples/001-hello-world/: CMakeLists.txt  main.cpp
examples/003-FCGI-hello-world/: CMakeLists.txt  app.h  main.cpp
examples/005-json-app/: CMakeLists.txt  app.hpp  main.cpp
examples/006-beast-json/: CMakeLists.txt  app.hpp  main.cpp
examples/008-counter-app/: CMakeLists.txt  app.cpp  app.hpp  configs.hpp  counter_model.hpp  main.cpp
examples/009-URI-playground/: CMakeLists.txt  app.hpp  index.html  main.cpp  pch.hpp
examples/01-hello-world/: CMakeLists.txt  config.h.in  index.html  main.cpp
sdk/: CMakeLists.txt  README.md  main.cpp  updater.h
sdk/cmds/: cmd.hpp  command.hpp  create.cpp  create.hpp  create_project.cpp  create_project.hpp
sdk/lib/: CMakeLists.txt
sdk/wpp/: CMakeLists.txt  main.cpp  updater.cpp  updater.h  updater.hpp
sdk/wsdk/: CMakeLists.txt  console.cpp  console.hpp  progress_console.hpp  progress_indicator.hpp
src/: CMakeLists.txt  router.h  validation.cpp  validation.h  webpp.cpp  webpp.h
src/cli/: CMakeLists.txt  main.cpp  updater.cpp
src/tests/: main.cpp
src/webpp/: CMakeLists.txt  config.cpp  config.h  meta.h  router.cpp  router.h  router.hpp  server.h  uri.h  validation.cpp  validation.h  validation.hpp  webpp.h  webpp.hpp
tests/: CMakeLists.txt  async_test.cpp  bodies_test.cpp  cache_test.cpp  charset.cpp  charset_test.cpp  common_pch.hpp  concurrency_test.cpp  configs_test.cpp  const_list_test.cpp  context_test.cpp  context_tests.cpp  convert.cpp  convert_test.cpp  cookie_jar.cpp  cookie_jar_test.cpp  cookies.cpp  cookies_test.cpp  crypto_test.cpp  database_test.cpp  domain_test.cpp  dynamic_router_test.cpp  endpoint_test.cpp  errors_test.cpp  extensions_test.cpp  fake_interface.hpp  fake_protocol.hpp  find_str_test.cpp  functional_test.cpp  header_accept_encoding_test.cpp  header_host_authority_test.cpp  headers_test.cpp  http_parser_test.cpp  idna_test.cpp  io_test.cpp  ip_address_test.cpp  ip_test.cpp  ipv4_fuzz.cpp  ipv4_test.cpp  ipv6_fuzz.cpp  (+43 more)
tests/assets/: convert-urltestdata-to-cpp.js  hello-bob.mustache  update-unicode.mjs
tests/common/: fake_protocol.hpp  fuzz_common.hpp  tests_common_pch.hpp
webpp/: CMakeLists.txt  README.md  config.h  main.hpp  router.cpp  router.h  server.h  thread.h  uri.cpp  version.hpp  webpp.hpp
webpp/application/: application_concepts.hpp
webpp/async/: async.hpp  async_concepts.hpp  run_loop.hpp  task.hpp  task_chain.hpp  tasks.hpp
webpp/beast/: README.md  beast.hpp  beast_body_communicator.hpp  beast_request.hpp  beast_server.hpp  beast_string_body.hpp
webpp/cgi/: cgi.hpp  cgi_request.hpp  cgi_request_body_communicator.hpp
webpp/common/: meta.hpp  os.hpp
webpp/concurrency/: atomic_counter.hpp  task_manager.hpp
webpp/configs/: config_concepts.hpp  configs.hpp
webpp/convert/: casts.hpp  lexical_cast.hpp
webpp/crypto/: base64.hpp  base64_url.hpp  brotli.hpp  encoded_word.hpp  gzip.hpp
webpp/db/: bank.hpp  query_builder.hpp  sql_cell.hpp  sql_column.hpp  sql_concepts.hpp  sql_database.hpp  sql_row.hpp  sql_statement.hpp
webpp/extensions/: README.md  extension.hpp  extension_wrapper.hpp
webpp/fcgi/: fcgi.hpp  fcgi_manager.hpp  fcgi_protocols.hpp  fcgi_request.hpp  fcgi_request_manager.hpp  fcgi_session_manager.hpp
webpp/http/: app_wrapper.hpp  (+27 more)
(+1095 files in other folders)
